added drop off pages, up until drop off time page

--- a/html/dropofftype.html
+++ b/html/dropofftype.html
@@ -3,6 +3,11 @@
   <head>
   </head>
   <body>
-    <p>where's hot john</p>
+    <p>Produce</p>
+    <p>Packaged</p>
+    <p>Prepared</p>
+    <p>Search: </p>
+    <a href="dropOffDetails.html">Next</a>
+    <a href="home.html">Back</a>
   </body>
 </html>
