--- a/html/home.html
+++ b/html/home.html
@@ -5,6 +5,10 @@
 
   <body>
     <div>
+      <a href="login.html">Sign Out</a>
+    </div>
+
+    <div>
       <a href="pickuptype.html">Pick Up</a>
     </div>
 
