--- a/html/pickuptype.html
+++ b/html/pickuptype.html
@@ -3,6 +3,16 @@
   <head>
   </head>
   <body>
-    <p>boobs</p>
+    <div>
+      <p>which type would you like to pick up?</p>
+      <p>produce</p>
+      <p>packages</p>
+      <p>prepared</p>
+    </div>
+    
+    <div>
+      <a href="home.html">back</a>
+      <a href="pickuptime.html">Next</a>
+    </div>
   </body>
 </html>
