--- a/html/match.html
+++ b/html/match.html
@@ -5,22 +5,21 @@
 
   <body>
     <div>
-      <p>First Name: </p>
-
-    </div>
-
-    <div>
-      <a href = "#">Upload profile picture </a>
-    </div>
-
-    <div>
       <p></p>
-      <a href="home.html">Submit </a>
+      <a href="home.html">Home </a>
     </div>
 
     <div>
-      <p></p>
-      <a href="index.html">Back </a>
+      <p>MATCH</p>
+      <p> Jerma Jerrica</p>
+    </div>
+
+    <div>
+      <p>Eggs</p>
+    </div>
+
+    <div>
+      <p>The Living Room 6:15PM</p>
     </div>
 
   </body>
