--- a/html/match.html
+++ b/html/match.html
@@ -10,12 +10,13 @@
     </div>
 
     <div>
-      <p>MATCH</p>
+      <h2>MATCH</h2>
       <p> Jerma Jerrica</p>
     </div>
 
     <div>
       <p>Eggs</p>
+      <img src = "../images/eggs.jpeg">
     </div>
 
     <div>
