--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -9,6 +9,6 @@
     <p>End: </p>
     <p>Location: </p>
     <a href="dropOffDetails.html">Back</a>
-    <a href="preview.html">Next</a>
+    <a href="preview.html">Submit</a>
   </body>
 </html>
