--- a/html/createUser.html
+++ b/html/createUser.html
@@ -14,7 +14,7 @@
     </div>
 
     <div>
-      <a href = "#">Upload profile picture </a>
+      <p>Upload profile picture </p>
     </div>
 
     <div>
