--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
   </head>
 
   <body>
     <div>
-      <a href="login.html">Login</a>
+      <a href="html/login.html">Login</a>
     </div>
 
     <div>
-      <a href="createUser.html">Create New User</a>
+      <a href="html/createUser.html">Create New User</a>
     </div>
   </body>
 </html>
