--- a/html/home.html
+++ b/html/home.html
@@ -5,15 +5,15 @@
   </head>
 
   <body>
-    <div>
+    <div id="signout">
       <a href="../index.html">Sign Out</a>
     </div>
 
-    <div>
+    <div class="selectbutton">
       <a href="pickuptype.html">Pick Up</a>
     </div>
 
-    <div>
+    <div class="selectbutton">
       <a href="dropofftype.html">Drop Off</a>
     </div>
   </body>
