--- a/html/sampleItem2.html
+++ b/html/sampleItem2.html
@@ -1,12 +1,17 @@
 <html>
   <head>
+    <link href="../css/swipe.css" rel="stylesheet">
   </head>
 
   <body>
-    <h2> Broccoli Salad </h2>
-    <div>
+    <h2 id = "title"> Broccoli Salad </h2>
+    <div id = "seller">
       <p>Seller: Jerrica</p>
+    </div>
+    <div>
       <img src="../images/broccoli.jpg">
+    </div>
+    <div class = "foodInfo">
       <p>Location: Price Center</p>
       <p>Allergens: nuts</p>
     </div>
@@ -15,11 +20,11 @@
       <a href="noMatch.html">No thanks!</a>
       <a href="match.html">I want it!</a>
     </div>
-    
+
     <div>
       <a href="home.html">Home</a>
     </div>
-    
+
     <div>
       <a href="userProfile.html" target="_blank">Seller Profile</a>
     </div>
