basic design of home page; still have to do layout

--- a/html/home.html
+++ b/html/home.html
@@ -5,16 +5,21 @@
   </head>
 
   <body>
-    <div id="signout">
-      <a href="../index.html">Sign Out</a>
-    </div>
+    <div>
 
-    <div class="selectbutton">
-      <a href="pickuptype.html">Pick Up</a>
-    </div>
+      <div id="signout">
+        <a href="../index.html">Sign Out</a>
+      </div>
 
-    <div class="selectbutton">
-      <a href="dropofftype.html">Drop Off</a>
+      <div class="selectbutton">
+        <a href="pickuptype.html">Pick Up</a>
+      </div>
+
+
+      <div class="selectbutton">
+        <a href="dropofftype.html">Drop Off</a>
+      </div>
+
     </div>
   </body>
 </html>
