created layout of home page

--- a/html/home.html
+++ b/html/home.html
@@ -3,23 +3,20 @@
   <head>
     <link href="../css/main.css" rel="stylesheet">
   </head>
-
   <body>
-    <div>
 
-      <div id="signout">
-        <a href="../index.html">Sign Out</a>
-      </div>
-
-      <div class="selectbutton">
-        <a href="pickuptype.html">Pick Up</a>
-      </div>
-
-
-      <div class="selectbutton">
-        <a href="dropofftype.html">Drop Off</a>
-      </div>
-
+    <div id="signout">
+      <a href="../index.html">Sign Out</a>
     </div>
+
+    <div class="selectbutton" id="pickup">
+      <a href="pickuptype.html">Pick Up</a>
+    </div>
+
+
+    <div class="selectbutton">
+      <a href="dropofftype.html">Drop Off</a>
+    </div>
+
   </body>
 </html>
