--- a/html/sampleItem2.html
+++ b/html/sampleItem2.html
@@ -6,27 +6,37 @@
   <body>
     <h2 id = "title"> Broccoli Salad </h2>
     <div id = "seller">
-      <p>Seller: Jerrica</p>
+      <a href="userProfile.html" target="_blank">Seller: Jerrica</a>
     </div>
+
+    <div id = "rate">
+      <p> Overall rating: * * * * * </p>
+    </div>
+
     <div>
       <img src="../images/broccoli.jpg">
     </div>
+
     <div class = "foodInfo">
       <p>Location: Price Center</p>
+    </div>
+
+    <div class = "foodInfo">
       <p>Allergens: nuts</p>
     </div>
 
-    <div>
+    <div class = "decision" id = "dislike">
       <a href="noMatch.html">No thanks!</a>
+    </div>
+
+    <div class = "decision" id = "like">
       <a href="match.html">I want it!</a>
     </div>
 
-    <div>
+
+    <div id = "home">
       <a href="home.html">Home</a>
     </div>
 
-    <div>
-      <a href="userProfile.html" target="_blank">Seller Profile</a>
-    </div>
   </body>
 </html>
