--- a/html/sampleItem1.html
+++ b/html/sampleItem1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-	  <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../css/swipe.css" rel="stylesheet">
+    <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
   </head>
 
   <body>
@@ -11,10 +11,6 @@
 
     <div class = "seller">
       <a href="userProfile.html" target="_blank">Seller: Jerrica</a>
-    </div>
-
-    <div class="thumbnail">
-      <p>hello</p>
     </div>
 
     <div id = "rate">
@@ -33,12 +29,15 @@
       <p>Allergens: Eggs</p>
     </div>
 
-    <div class = "decision" id = "dislike">
-      <a href="sampleItem2.html">No thanks!</a>
-    </div>
 
-    <div class = "decision" id = "like">
-      <a href="match.html">I want it!</a>
+    <div class="row">
+      <div class = "decision col-sm-1 col-md-offset-5" id = "dislike">
+        <a href="sampleItem2.html">No thanks!</a>
+      </div>
+
+      <div class = "decision col-sm-1" id = "like">
+        <a href="match.html">I want it!</a>
+      </div>
     </div>
 
     <div id = "home">
