--- a/html/sampleItem1.html
+++ b/html/sampleItem1.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="../css/swipe.css" rel="stylesheet">
     <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/swipe.css" rel="stylesheet">
+
   </head>
 
   <body>
-    <h2 id = "title"> Eggs </h2>
-
-    <div class = "seller">
-      <a href="userProfile.html" target="_blank">Seller: Jerrica</a>
-    </div>
-
-    <div id = "rate">
-      <p> Overall rating: * * * * * </p>
-    </div>
-
-    <div id = "pic">
-      <img src="../images/eggs.jpeg">
-    </div>
-
-    <div class = "foodInfo" id = "location">
-      <p>Location: Price Center</p>
-    </div>
-
-    <div class = "foodInfo" id = "allergens">
-      <p>Allergens: Eggs</p>
-    </div>
-
-
-    <div class="row">
-      <div class = "decision col-sm-1 col-md-offset-5" id = "dislike">
-        <a href="sampleItem2.html">No thanks!</a>
+    <div class="container">
+      <div class="row justify-content-center">
+        <h2 id = "title col-lg-4"> Eggs </h2>
+      </div>
+      
+      <div class="row justify-content-center">
+        <div class = "seller col-lg-4">
+          <a href="userProfile.html" target="_blank">Seller: Jerrica</a>
+        </div>
       </div>
 
-      <div class = "decision col-sm-1" id = "like">
-        <a href="match.html">I want it!</a>
+      <div class="row justify-content-center">
+        <div class="col col-lg-4" id = "rate">
+          <p> Overall rating: * * * * * </p>
+        </div>
       </div>
-    </div>
 
-    <div id = "home">
-      <a href="home.html">Home</a>
+      <div id = "pic">
+        <img src="../images/eggs.jpeg">
+      </div>
+
+
+      <div class="row justify-content-center">
+        <div class = "foodInfo col-lg-4" id = "location">
+          <p>Location: Price Center</p>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class = "foodInfo col-lg-4" id = "allergens">
+          <p>Allergens: Eggs</p>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class = "decision col-lg-2 " id = "dislike">
+          <a href="sampleItem2.html">No thanks!</a>
+        </div>
+
+        <div class = "decision col-lg-2 " id = "like">
+          <a href="match.html">I want it!</a>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col col-lg-4" id = "home" >
+          <a href="home.html">Home</a>
+        </div>
+      </div>
+      
     </div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
