--- a/html/sampleItem2.html
+++ b/html/sampleItem2.html
@@ -1,42 +1,66 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/swipe.css" rel="stylesheet">
+
   </head>
 
   <body>
-    <h2 id = "title"> Broccoli Salad </h2>
-    <div id = "seller">
-      <a href="userProfile.html" target="_blank">Seller: Jerrica</a>
+    <div class="container">
+      <div class="row justify-content-center">
+        <h2 id = "title col-lg-4"> Eggs </h2>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class = "seller col-lg-4">
+          <a href="userProfile.html" target="_blank">Seller: Jerrica</a>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col col-lg-4" id = "rate">
+          <p> Overall rating: * * * * * </p>
+        </div>
+      </div>
+
+      <div id = "pic">
+        <img src="../images/broccoli.jpg">
+      </div>
+
+
+      <div class="row justify-content-center">
+        <div class = "foodInfo col-lg-4" id = "location">
+          <p>Location: Price Center</p>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class = "foodInfo col-lg-4" id = "allergens">
+          <p>Allergens: Eggs</p>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class = "decision col-lg-2 " id = "dislike">
+          <a href="noMatch.html">No thanks!</a>
+        </div>
+
+        <div class = "decision col-lg-2 " id = "like">
+          <a href="match.html">I want it!</a>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col col-lg-4" id = "home" >
+          <a href="home.html">Home</a>
+        </div>
+      </div>
+
     </div>
 
-    <div id = "rate">
-      <p> Overall rating: * * * * * </p>
-    </div>
-
-    <div>
-      <img src="../images/broccoli.jpg">
-    </div>
-
-    <div class = "foodInfo">
-      <p>Location: Price Center</p>
-    </div>
-
-    <div class = "foodInfo">
-      <p>Allergens: nuts</p>
-    </div>
-
-    <div class = "decision" id = "dislike">
-      <a href="noMatch.html">No thanks!</a>
-    </div>
-
-    <div class = "decision" id = "like">
-      <a href="match.html">I want it!</a>
-    </div>
-
-
-    <div id = "home">
-      <a href="home.html">Home</a>
-    </div>
-
+    <script src="https://code.jquery.com/jquery.js"></script>
+  	<script src="../js/bootstrap.min.js"></script>
   </body>
 </html>
