--- a/html/sampleItem2.html
+++ b/html/sampleItem2.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="row justify-content-center">
-        <h2 id = "title col-lg-4"> Eggs </h2>
+        <h2 id = "title col-lg-4"> Broccoli Salad </h2>
       </div>
 
       <div class="row justify-content-center">
@@ -38,7 +38,7 @@
 
       <div class="row justify-content-center">
         <div class = "foodInfo col-lg-4" id = "allergens">
-          <p>Allergens: Eggs</p>
+          <p>Allergens: nuts</p>
         </div>
       </div>
 
