begin styling index, buttons not yet styled

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <link href="css/indexstyle.css" rel="stylesheet">
   </head>
 
   <body>
-    <div>
-      <a href="html/login.html">Login</a>
-    </div>
-
-    <div>
-      <a href="html/createUser.html">Create New User</a>
+    <div class="overlay">
+      <a href="html/login.html" class="choice" id="login">Login</a>
+      <br />
+      <a href="html/createUser.html" class="choice" id="newuser">Create New User</a>
     </div>
   </body>
 </html>
