--- a/html/match.html
+++ b/html/match.html
@@ -1,27 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/pair.css" rel="stylesheet">
   </head>
 
   <body>
-    <div>
-      <p></p>
-      <a href="home.html">Home </a>
+    <div class = "container">
+      <div class="row justify-content-center">
+        <h2 id = "title col-lg-4"> MATCH </h2>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class = "user col-lg-2 " id = "name1">
+          <p> Jerma </p>
+        </div>
+
+        <div class = "user col-lg-2 " id = "name2">
+          <a href="userProfile.html" target="_blank">Jerrica</a>
+        </div>
+      </div>
+
+      <div id = #pic>
+        <img src = "../images/eggs.jpeg">
+      </div>
+
+      <div class="row justify-content-center">
+        <div class = "info col-lg-2 " id = "location">
+          <p>Price Center</p>
+        </div>
+
+        <div class = "info col-lg-2 " id = "time">
+          <p>6:15PM</p>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col col-lg-8" id = "home" >
+          <a href="home.html">Home</a>
+        </div>
+      </div>
     </div>
 
-    <div>
-      <h2>MATCH</h2>
-      <p> Jerma Jerrica</p>
-    </div>
-
-    <div>
-      <p>Eggs</p>
-      <img src = "../images/eggs.jpeg">
-    </div>
-
-    <div>
-      <p>Price Center 6:15PM</p>
-    </div>
-
+    <script src="https://code.jquery.com/jquery.js"></script>
+  	<script src="../js/bootstrap.min.js"></script>
   </body>
 </html>
