styled create new user page, no functionality yet

--- a/html/createUser.html
+++ b/html/createUser.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/createuserstyle.css" rel="stylesheet">
   </head>
 
   <body>
-    <div>
-      <p>First Name: </p>
-      <p>Last Name: </p>
-      <p>Email: </p>
-      <p>Username: </p>
-      <p>Password: </p>
-      <p>School: </p>
-    </div>
+    <div class="overlay">
 
-    <div>
-      <p>Upload profile picture </p>
-    </div>
+      <p class="title">Create Account</p>
+      <div class="userinfo">
+        <p>First Name: </p>
+        <p>Last Name: </p>
+        <p>Email: </p>
+        <p>Username: </p>
+        <p>Password: </p>
+        <p>School: </p>
+      </div>
 
-    <div>
-      <p></p>
-      <a href="home.html">Submit </a>
-    </div>
+      <div class="userinfo">
+        <p>Upload profile picture </p>
+      </div>
 
-    <div>
-      <p></p>
-      <a href="index.html">Back </a>
-    </div>
+      <div>
+        <a href="index.html" class="btn btn-dark">Back </a>
+        <a href="home.html" class="btn btn-dark" id="submit">Submit </a>
+      </div>
 
   </body>
 </html>
