--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <!--link bootstrap and css stylesheet-->
+    <script src="js/login.js"></script>
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/indexstyle.css" rel="stylesheet">
@@ -22,7 +23,7 @@
       <div class="field"></div>
       <br /> <br />
 
-      <button class="btn btn-dark">Login</button> <!--FIX STYLING TO BUTTON-->
+      <a href="html/home.html" class="btn btn-dark">Login</a> 
     </div>
 
     <div class="newuser">
