--- a/html/createUser.html
+++ b/html/createUser.html
@@ -24,7 +24,7 @@
       </div>
 
       <div>
-        <a href="index.html" class="btn btn-dark">Back </a>
+        <a href="../index.html" class="btn btn-dark">Back </a>
         <a href="home.html" class="btn btn-dark" id="submit">Submit </a>
       </div>
 
