pickup time input

--- a/html/pickuptime.html
+++ b/html/pickuptime.html
@@ -6,7 +6,7 @@
   <body>
     <div>
 			<p>Please select pickup time range and location: </p>
-			<p>Start time: </p>	
+			<p>Start time: <input type="time" name="start-time" required/> </p>	
       <p>End time: </p>
       <p>Location: </p>
     </div>
