pickup endtime input

--- a/html/pickuptime.html
+++ b/html/pickuptime.html
@@ -7,7 +7,7 @@
     <div>
 			<p>Please select pickup time range and location: </p>
 			<p>Start time: <input type="time" name="start-time" required/> </p>	
-      <p>End time: </p>
+			<p>End time: <input type="time" name="end-time" required/> </p>
       <p>Location: </p>
     </div>
 
