miraculously linked jquery and javascript

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <!--link bootstrap and css stylesheet-->
-    <script src="js/login.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/indexstyle.css" rel="stylesheet">
@@ -23,7 +24,7 @@
       <div class="field"></div>
       <br /> <br />
 
-      <a href="html/home.html" class="btn btn-dark">Login</a> 
+      <a href="html/home.html" class="btn btn-dark">Login</a>
     </div>
 
     <div class="newuser">
@@ -33,5 +34,6 @@
     <!--link javascript-->
     <script src="https://code.jquery.com/jquery.js"></script>
 	  <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
   </body>
 </html>
