--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -5,8 +5,8 @@
 
   <body>
     <p>Please select drop off time range and place:</p>
-    <p>Start: </p>
-    <p>End: </p>
+    <p>Start time: <input type="time" name="start-time" required/> </p>
+    <p>End time: <input type="time" name="end-time" required/> </p>
     <p>Location: </p>
     <a href="dropOffDetails.html">Back</a>
     <a href="preview.html">Submit</a>
