--- a/html/match.html
+++ b/html/match.html
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div id = #pic>
+      <div id = "pic">
         <img src = "../images/eggs.jpeg">
       </div>
 
