--- a/html/pickuptime.html
+++ b/html/pickuptime.html
@@ -6,13 +6,13 @@
   <body>
     <div>
 			<p>Please select pickup time range and location: </p>
-			<p>Start time: <input type="time" name="start-time" required/> </p>	
+			<p>Start time: <input type="time" name="start-time" required/> </p>
 			<p>End time: <input type="time" name="end-time" required/> </p>
       <p>Location: </p>
     </div>
 
     <div>
-      <a href="home.html">back</a>
+      <a href="home.html">Back</a>
       <a href="sampleItem1.html">Start Exploring!</a>
     </div>
   </body>
