changes from before

--- a/html/dropofftype.html
+++ b/html/dropofftype.html
@@ -4,10 +4,14 @@
   </head>
   <body>
 
-    <p>Produce</p>
-    <p>Packaged</p>
-    <p>Prepared</p>
-    <p>Search: </p>
+    <div>
+      <p>Which type of food would you like to drop off?</p>
+      <input type=checkbox name="produce"> produce <br>
+      <input type=checkbox name="packaged"> packaged <br>
+      <input type=checkbox name="prepared"> prepared <br>
+    </div>
+    
+    <p>Search: <input type="text" name="exp-date"> </p>
     <a href="home.html">Back</a>
     <a href="dropOffDetails.html">Next</a>
   </body>
