--- a/html/pickuptime.html
+++ b/html/pickuptime.html
@@ -8,11 +8,21 @@
 			<p>Please select pickup time range and location: </p>
 			<p>Start time: <input type="time" name="start-time" required/> </p>
 			<p>End time: <input type="time" name="end-time" required/> </p>
-      <p>Location: </p>
+      
+      <p>Location:
+        <select class=pickupDetails>
+          <option>Geisel Library</option>
+          <option>The Living Room</option>
+          <option>Regents Pizza</option>
+          <option>Price Center</option>
+        </select>
+      </p>
+
+      
     </div>
 
     <div>
-      <a href="home.html">Back</a>
+      <a href="pickuptype.html">Back</a>
       <a href="sampleItem1.html">Start Exploring!</a>
     </div>
   </body>
