--- a/html/pickuptype.html
+++ b/html/pickuptype.html
@@ -4,11 +4,13 @@
   </head>
   <body>
     <div>
-      <p>which type would you like to pick up?</p>
-      <p>produce</p>
-      <p>packages</p>
-      <p>prepared</p>
+      <p>Which type of food would you like to drop off?</p>
+      <input type=checkbox name="produce"> produce <br>
+      <input type=checkbox name="packaged"> packaged <br>
+      <input type=checkbox name="prepared"> prepared <br>
     </div>
+    
+    <p>Search: <input type="text" name="exp-date"> </p>
     
     <div>
       <a href="home.html">back</a>
