types and things

--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -32,16 +32,18 @@
         </div>
       </div>
 
-      <div class="row justify-content-center">
-        <div class = "option col-lg-2 " id = "back">
+      <div class="row">
+        <div class = "option col-sm-1 offset-md-4 navbutton">
           <a href="dropOffDetails.html">Back</a>
         </div>
 
-        <div class = "option col-lg-2 " id = "submit">
+        <div class = "option col-sm-1 offset-md-2 navbutton">
           <a href="preview.html">Submit</a>
         </div>
       </div>
 
+      
+      
     </div>
   </body>
 </html>
