--- a/html/pickuptime.html
+++ b/html/pickuptime.html
@@ -32,15 +32,16 @@
         </div>
       </div>
 
-      <div class="row justify-content-center">
-        <div class = "option col-lg-2 " id = "back">
+      <div class="row">
+        <div class = "option col-sm-1 offset-md-4 navbutton">
           <a href="pickuptype.html">Back</a>
         </div>
 
-        <div class = "option col-lg-2 " id = "submit">
+        <div class = "option col-sm-1 offset-md-2 navbutton">
           <a href="sampleItem1.html">Start</a>
         </div>
       </div>
+  
 
     </div>
   </body>
