--- a/html/sampleItem2.html
+++ b/html/sampleItem2.html
@@ -44,7 +44,7 @@
 
       <div class="row justify-content-center">
         <div class = "decision col-lg-2 " id = "dislike">
-          <a href="noMatch.html">No thanks!</a>
+          <a href="ItemTemplate.html">No thanks!</a>
         </div>
 
         <div class = "decision col-lg-2 " id = "like">
