--- a/html/ItemTemplate.html
+++ b/html/ItemTemplate.html
@@ -92,7 +92,7 @@
 
         <div class="row justify-content-center">
           <div class = "decision col-lg-2 " id = "dislike">
-            <a href="sampleItem2.html">No thanks!</a>
+            <a href="noMatch.html">No thanks!</a>
           </div>
 
           <div class = "decision col-lg-2 " id = "like">
