--- a/html/dropOffTime.html
+++ b/html/dropOffTime.html
@@ -38,12 +38,12 @@
         </div>
 
         <div class = "option col-sm-1 offset-md-2 navbutton">
-          <a href="preview.html">Submit</a>
+          <a href="preview.html">Next</a>
         </div>
       </div>
 
-      
-      
+
+
     </div>
   </body>
 </html>
