--- a/html/ItemTemplate.html
+++ b/html/ItemTemplate.html
@@ -39,7 +39,7 @@
 
         <div class="row justify-content-center">
           <div class = "decision col-lg-2 " id = "dislike">
-            <a href="noMatch.html">No thanks!</a>
+            <a href="ItemTemplate.html?project={{next}}">No thanks!</a>
           </div>
 
           <div class = "decision col-lg-2 " id = "like">
