--- a/html/userProfile.html
+++ b/html/userProfile.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/user.css" rel="stylesheet">
   </head>
 
   <body>
-    <div>
-      <a href="home.html">Home</a>
+    <div class = "container">
+      <div class = "overlay">
+        <div class="row justify-content-center">
+          <h2 id = "title col-lg-4"> Jerrica </h2>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class = "rate col-lg-2 " id = "rating">
+            <p> Overall Rating: </p>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <h2 id = "past col-lg-4"> Past Drop offs: </h2>
+          <div class = "list col-lg-2 " id = "listFood">
+            <p>1) Broccoli Ice Cream </p>
+            <p>2) Bananas (x6)</p>
+            <p>3) Broccoli Salad</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class = "option col-md-2 offset-md-5 navbutton">
+          <a href="home.html">Home</a>
+        </div>
+      </div>
+
     </div>
 
-    <div>
-      <p>Jerrica </p>
-      <p> Overall Rating: </p>
-    </div>
-
-    <div>
-      <p>Past Drop Offs:</p>
-      <p>1) Broccoli Ice Cream </p>
-      <p>2) Bananas (x6)</p>
-      <p>3) Broccoli Salad</p>
-    </div>
-
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
   </body>
 </html>
