--- a/html/userProfile.html
+++ b/html/userProfile.html
@@ -14,23 +14,26 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class = "rate col-lg-2 " id = "rating">
-            <p> Overall Rating: </p>
+          <div class = "rate col-lg-6 " id = "rating">
+            <p> Overall Rating: &starf;&starf;&starf;&starf;&starf; </p>
           </div>
         </div>
 
         <div class="row justify-content-center">
-          <h2 id = "past col-lg-4"> Past Drop offs: </h2>
-          <div class = "list col-lg-2 " id = "listFood">
+          <div class="pastFood col-lg-10 text-left" id = "past" >
+            <p> Past Drop offs: </p>
+          </div>
+
+          <div class="pastFood col-lg-10 text-left" id = "listFood" >
             <p>1) Broccoli Ice Cream </p>
             <p>2) Bananas (x6)</p>
             <p>3) Broccoli Salad</p>
           </div>
-        </div>
+        </div
       </div>
 
       <div class="row">
-        <div class = "option col-md-2 offset-md-5 navbutton">
+        <div class = "option col-sm-2 offset-md-10 navbutton">
           <a href="home.html">Home</a>
         </div>
       </div>
