--- a/html/match.html
+++ b/html/match.html
@@ -8,39 +8,40 @@
 
   <body>
     <div class = "container">
-      <div class="row justify-content-center">
-        <h2 id = "title col-lg-4"> MATCH </h2>
-      </div>
-
-      <div class="row justify-content-center">
-        <div class = "user col-lg-2 " id = "name1">
-          <p> Jerma </p>
+      <div class = "overlay">
+        <div class="row justify-content-center">
+          <h2 id = "title col-lg-4"> MATCH </h2>
         </div>
 
-        <div class = "user col-lg-2 " id = "name2">
-          <a href="userProfile.html" target="_blank">Jerrica</a>
-        </div>
-      </div>
+        <div class="row justify-content-center">
+          <div class = "user col-lg-4" id = "name1">
+            <p> Jerma </p>
+          </div>
 
-      <div id = "pic">
-        <img src = "../images/eggs.jpeg">
-      </div>
-
-      <div class="row justify-content-center">
-        <div class = "info col-lg-2 " id = "location">
-          <p>Price Center</p>
+          <div class = "user col-lg-4" id = "name2">
+            <a href="userProfile.html" target="_blank">Jerrica</a>
+          </div>
         </div>
 
-        <div class = "info col-lg-2 " id = "time">
-          <p>6:15PM</p>
+        <div id = "pic">
+          <img src = "../images/eggs.jpeg">
         </div>
-      </div>
 
-      <div class="row justify-content-center">
-        <div class="col col-lg-8" id = "home" >
-          <a href="home.html">Home</a>
+        <div class="row justify-content-center">
+          <div class = "info col-lg-4 " id = "location">
+            <p>Price Center</p>
+          </div>
+
+          <div class = "info col-lg-4 " id = "time">
+            <p>6:15PM</p>
+          </div>
         </div>
       </div>
+        <div class="row">
+          <div class = "option col-sm-1 offset-md-7 navbutton">
+            <a href="home.html">Home</a>
+          </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
