--- a/html/noMatch.html
+++ b/html/noMatch.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <script id="entry-template" type="text/x-handlebars-template"></script>
     <div class = "container">
         <div class = "overlay">
           <div class="row justify-content-center">
@@ -31,5 +32,7 @@
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/handlebars-v4.0.12.js"></script>
+    <script src="../js/data.js"></script>
   </body>
 </html>
